<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_create_stage"
    />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_space"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_title"
    />
<EditText android:id="@+id/TitleEditText"
          android:text="@string/label_empty"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_space"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_author"
    />
<EditText android:id="@+id/AuthorEditText"
          android:text="@string/label_empty"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"/>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_space"
    />
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_space"
    />
<Button android:id="@+id/CreateButton"
        android:text="@string/label_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/label_space"
    />
<Button android:id="@+id/CancelButton"
        android:text="@string/label_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
